force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/AGE__c.field-meta.xml
<CustomField>
    <fullName>AGE__c</fullName>
    <label>AGE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>