force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/CHG_RSN__c.field-meta.xml
<CustomField>
    <fullName>CHG_RSN__c</fullName>
    <label>CHG_RSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>