force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/CRGR_DIV_CD__c.field-meta.xml
<CustomField>
    <fullName>CRGR_DIV_CD__c</fullName>
    <label>CRGR_DIV_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>