force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/CUST_REQR_TEL_NO__c.field-meta.xml
<CustomField>
    <fullName>CUST_REQR_TEL_NO__c</fullName>
    <label>CUST_REQR_TEL_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>