force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/GD_BD__c.field-meta.xml
<CustomField>
    <fullName>GD_BD__c</fullName>
    <label>GD_BD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>