force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/GEND_CD__c.field-meta.xml
<CustomField>
    <fullName>GEND_CD__c</fullName>
    <label>GEND_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>