force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/img_file_url1__c.field-meta.xml
<CustomField>
    <fullName>img_file_url1__c</fullName>
    <label>img_file_url1</label>
    <type>Url</type>
</CustomField>