force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/IsNotVOC__c.field-meta.xml
<CustomField>
    <fullName>IsNotVOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNotVOC</label>
    <type>Checkbox</type>
</CustomField>