force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/LGS_ACTN_RSLT_CD__c.field-meta.xml
<CustomField>
    <fullName>LGS_ACTN_RSLT_CD__c</fullName>
    <label>LGS_ACTN_RSLT_CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>