force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/LGS_CTR_ID__c.field-meta.xml
<CustomField>
    <fullName>LGS_CTR_ID__c</fullName>
    <label>LGS_CTR_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>