force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/MD_EMP_ID__c.field-meta.xml
<CustomField>
    <fullName>MD_EMP_ID__c</fullName>
    <label>MD_EMP_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>