force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/MIGR_ORINAT_NM__c.field-meta.xml
<CustomField>
    <fullName>MIGR_ORINAT_NM__c</fullName>
    <label>MIGR_ORINAT_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>