force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/MNF_YMD__c.field-meta.xml
<CustomField>
    <fullName>MNF_YMD__c</fullName>
    <label>MNF_YMD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>