force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/MNGPLC_NM__c.field-meta.xml
<CustomField>
    <fullName>MNGPLC_NM__c</fullName>
    <label>MNGPLC_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>