force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/ORDR_QTY__c.field-meta.xml
<CustomField>
    <fullName>ORDR_QTY__c</fullName>
    <label>ORDR_QTY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>