force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/reg_id__c.field-meta.xml
<CustomField>
    <fullName>reg_id__c</fullName>
    <label>reg_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>