force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/REGR_ID__c.field-meta.xml
<CustomField>
    <fullName>REGR_ID__c</fullName>
    <label>REGR_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>