force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/RTN_CFM_YMD__c.field-meta.xml
<CustomField>
    <fullName>RTN_CFM_YMD__c</fullName>
    <label>RTN_CFM_YMD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>