force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/RTN_NFXAT_BOX_QTY__c.field-meta.xml
<CustomField>
    <fullName>RTN_NFXAT_BOX_QTY__c</fullName>
    <label>RTN_NFXAT_BOX_QTY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>