force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/SALE_PRC__c.field-meta.xml
<CustomField>
    <fullName>SALE_PRC__c</fullName>
    <label>SALE_PRC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>