force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/SLF_PRS_YN__c.field-meta.xml
<CustomField>
    <fullName>SLF_PRS_YN__c</fullName>
    <label>SLF_PRS_YN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>