force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/SMA_EMP_HPNO__c.field-meta.xml
<CustomField>
    <fullName>SMA_EMP_HPNO__c</fullName>
    <label>SMA_EMP_HPNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>