force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/VOC_DCLS_ID__c.field-meta.xml
<CustomField>
    <fullName>VOC_DCLS_ID__c</fullName>
    <label>VOC_DCLS_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>