force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/VOC_DTL_NO__c.field-meta.xml
<CustomField>
    <fullName>VOC_DTL_NO__c</fullName>
    <label>VOC_DTL_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>