force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/VOC_DTL_TXT__c.field-meta.xml
<CustomField>
    <fullName>VOC_DTL_TXT__c</fullName>
    <label>VOC_DTL_TXT</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>