force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/VOC_PRG_NM__c.field-meta.xml
<CustomField>
    <fullName>VOC_PRG_NM__c</fullName>
    <label>VOC_PRG_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>