force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/VOC_QTY__c.field-meta.xml
<CustomField>
    <fullName>VOC_QTY__c</fullName>
    <label>VOC_QTY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>