force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_DETAIL__c/fields/voc_rsn_cd__c.field-meta.xml
<CustomField>
    <fullName>voc_rsn_cd__c</fullName>
    <label>voc_rsn_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>